clean up issue tracker

--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1 pull-right">
-              <%= link_to new_adm_tep_path, :class => "btn btn-default glyphicon glyphicon-plus action-large" do %>  
+              <%= link_to new_adm_tep_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
 
                   <span class="large-btn-text">Add New Student</span>
 
