--- a/app/views/issue_updates/index.html.erb
+++ b/app/views/issue_updates/index.html.erb
@@ -1,42 +1,36 @@
-issueupdates#index!
-<%= params %>
-
-<%= link_to student_issues_path(@issue.IssueID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to student_issues_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
-<% end %>
+<% end %> 
 
-<div class="index">
+<table class="table table-striped">
 
-  <table class="listing" summary="praxis list">
-    <caption>   
-      <h2>Praxis Results for <%= "#{@student.FirstName} #{@student.LastName}"%></h2>
+  <caption>
+    <div class="header1">
+      <%="#{@student.FirstName} #{@student.LastName}"%>
+    </div>
 
-      <div> <%= pluralize(@student.praxis_results.size, 'result') %>  found </div>
+    <div class="header2">Updates for issue: <%= @issue.Name %></div>
+  </caption>
 
-    </caption>
+  <% if @updates %>
+    <tr>
+      <th>Update</th>
+      <th>Date</th>
+    </tr>
+  
 
-    <% if @student.praxis_results.size > 0  %>
+    <% @updates.each do |update| %>
 
-          <tr class="header">
-            <th>Test Name</th>
-            <th>Date Taken</th>
-            <th>Score</th>
-            <th>Best Score as of Test Date</th>      
-            <th>Cut Score</th>
-          </tr>
-          <% @student.praxis_results.each do |result| %>
-          <tr class "<%= cycle('odd', 'even') %>">
-      	  <td><%= PraxisTest.find(result.TestCode).TestName %></td>
-      	  <td><%= result.TestDate.strftime("%m/%d/%Y")%> </td>
-      	  <td><%= result.TestScore %></td>
-          <td><%= result.BestScore %></td>   
-      	  <td><%= result.CutScore %></td>
-
-          </tr>
-
-          <% end %>
-          
+      <tr>
+        <td><%=update.UpdateName%></td>
+        <td> <%=update.CreateDate.strftime("%m/%d/%Y")%> </td>
+        <td class="actions">
+          <%= link_to "Details", issue_update_path(update.UpdateID), class: "btn btn-info action-small"%>
+        </td>
+      </tr>
+      
     <% end %>
 
-  </table>
-</div>
+  <% end %>
+
+</table>
