--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,4 +1,3 @@
-
 <%= link_to student_issues_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
@@ -52,6 +51,7 @@
     <td class="wrap"><%= @issue.Description %></td>
   </tr>
 
+  <!-- updates button -->
   <tr>
     <td class="actions" colspan="2">
       <div class="btn btn-info">
