--- a/app/views/issue_updates/index.html.erb
+++ b/app/views/issue_updates/index.html.erb
@@ -10,6 +10,14 @@
     </div>
 
     <div class="header2">Updates for issue: <%= @issue.Name %></div>
+    <div class="row">
+      <div class="col-md-1 pull-right">
+        <%= link_to new_issue_issue_update_path(@issue.IssueID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %> 
+          <span class="large-btn-text">Add New Update</span>
+
+        <% end %>    
+      </div>
+    </div>
   </caption>
 
   <% if @updates %>
