details for adm_tep and adm_st

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -341,7 +341,7 @@ caption .container .row {width: inherit;}
     /*action buttons inside tables*/
 
     color: black;
-    background-color: #F9F9F9   
+    /*background-color: #F9F9F9   */
   }
 
 
