--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -43,8 +43,8 @@
             <th>Praxis Pass</th>       
             <th>Admit Date</th>
             <th>Admission Decision</th>
+            <th>Details</th>
             <th>Letter</th>
-<!--             <th>Decision Letter</th>     -->
 
           </tr>
       	<% @applications.each do |app|%>
@@ -82,16 +82,21 @@
 
               <%= app.TEPAdmit ? "Admitted" : "Not admitted"%>
 
-    <% end %>
+            <% end %>
       </td>
-<!-- <button type="button" class="btn btn-default btn-lg text-center"><span class="glyphicon glyphicon-share"></span><br>Resend</button> -->
+
+      <td>
+        
+        <%= link_to("Details", adm_tep_path(app.AltID), :class => "action details btn btn-info action-small issues")%>
+      </td>
+
       <% if app.letter_file_name %>      
-          <td class="doc-download"> 
+      <td class="doc-download"> 
 
             <%= link_to app.letter.url, :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
             <% end %>
 
-          </td>
+      </td>
       <% end %>
 
 
