--- a/app/views/adm_tep/show.html.erb
+++ b/app/views/adm_tep/show.html.erb
@@ -1,2 +1,27 @@
-<h1>AdmTep#show</h1>
-<p>Find me in app/views/adm_tep/show.html.erb</p>
+<%= link_to banner_term_adm_tep_index_path(@term), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
+<div class="adm_tep show">
+
+
+  <table class="vertical-table" summary="adm_tep detail view">
+  <caption> 
+ 	<div class="header1"> <%=[@first_name, @last_name].join(', ') +': ' + @term.PlainTerm%> </div>
+	<div class="header2">Application to TEP Details</div>
+
+  </caption>
+
+    <tr>
+      <th>Admission Decision</th>
+      <td><%= @app.TEPAdmit ? "Admitted" : "Not admitted"%></td>
+    </tr>
+
+    <tr>
+      <th>Notes</th>
+      <td><%= @app.Notes%></td>
+    </tr>
+
+  </table>
+
+</div>
