--- a/app/views/application/_error_messages.html.erb
+++ b/app/views/application/_error_messages.html.erb
@@ -9,7 +9,7 @@ Here's how this gets displayed.
 <% if object && object.errors.size > 0 %>
   <div id="errorExplanation">
     <h2><%= pluralize(object.errors.size, "error") %> prohibited this record from being saved</h2>
-    <p>There were problems with the following fields:</p>
+    <p>The following problems were encountered:</p>
     <ul>
     <% object.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
