--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,13 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-        logged_in_user@email.com
        
-        <a href="#" class="btn btn-default">Log Out</a></p>  
+            logged_in_user@email.com
+              
+            <a href="#" class="btn btn-default">
+          Log Out
+            </a>
+    </p>  
 
   </div>
   <div class="container-fluid">
@@ -44,12 +48,6 @@
   </div>
 
 </div>
-
-
-
-<!-- OLD HEADER STARTS HERE -->
-
-
 
 		<!--Before yield -->
     <%= params %>
