--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -30,16 +30,16 @@
 
 
           <!-- TODO grayed out button if no praxis results, issues -->
-        <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" do %>
-                </br>
-                <span class="small-btn-text"> Praxis Results 
-                  <span class="badge">
-                    <%=student.praxis_results.size%> 
-                  </span>
-              </span>
+  
+          <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" + (student.praxis_results.size > 0 ? "" : " disabled") do %>
+                  </br>
+                  <span class="small-btn-text"> Praxis Results 
+                    <span class="badge">
+                      <%=student.praxis_results.size%> 
+                    </span>
+                </span>
 
-            <% end %>
-
+              <% end %>
 
         <%= link_to student_issues_path(student.AltID),:class => "btn btn-info action-small issues" do %>
               </br><span class="small-btn-text">
