clinical_sites, clinical_teachers

--- a/app/views/clinical_sites/_form.html.erb
+++ b/app/views/clinical_sites/_form.html.erb
@@ -21,7 +21,7 @@
     </tr>
 
     <tr>
-      <th> <%= f.label(:District, "Distric")%> </th>
+      <th> <%= f.label(:District, "District")%> </th>
       <td> <%= f.text_field(:District) %></td>
     </tr>
 
