--- a/app/views/clinical_sites/new.html.erb
+++ b/app/views/clinical_sites/new.html.erb
@@ -12,7 +12,7 @@
 	<%= render(partial: 'form', locals: {f: f}) %>
 
 	<tr>
-		<td><%= submit_tag("Update Site") %></td>
+		<td><%= submit_tag("Create Site") %></td>
 	</tr>
 
 <% end %>
