--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,9 +38,11 @@
       <li class="dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Placements</a></li>
-          <li><%= link_to("Clinical Teachers", clinical_teachers_path) %></li>
-          <li><%= link_to("Clinical Sites", clinical_sites_path) %></li>
+          <li><%= link_to("Clinical Placements", clinical_assignments_path) %></li>
+          <li><%= link_to("Clinical Teachers", 
+          clinical_teachers_path) %></li>
+          <li><%= link_to("Clinical Sites", 
+          clinical_sites_path) %></li>
         </ul>
       </li>
     </ul>
