--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -26,10 +26,12 @@
             <script type="text/javascript">
                 $('[data-behaviour~=datepicker]').datepicker({
                     format: 'mm/dd/yyyy',
-                    startDate: <%=@term.StartDate.strftime("%m/%d/%Y")  %>,
-                    endDate: <%=@term.EndDate.strftime("%m/%d/%Y")  %>
+                    startDate: <%=@term.StartDate.strftime("%m/%d/%Y") %>,
+                    endDate: <%=@term.EndDate.strftime("%m/%d/%Y") %>
                 });
-            </script></td>
+            </script>
+            </td>
+        
 
              <tr>
               <th><%= f.label(:Notes, "Comments") %></th>
