--- a/app/views/clinical_teachers/edit.html.erb
+++ b/app/views/clinical_teachers/edit.html.erb
@@ -1,4 +1,6 @@
-<!-- TODO back button -->
+<%= link_to clinical_teachers_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
 
 <%= form_for(@teacher, url: clinical_teacher_path(@teacher.id)) do |f| %>
 
