--- a/app/views/adm_st/index.html.erb
+++ b/app/views/adm_st/index.html.erb
@@ -63,7 +63,7 @@
                 1) Student has no admission decision
                 2) we are currently inside a term
                 3) the term displayed is a current term.-->
-            <% if app.STAdmitted == nil and @term = current_term(exact=false)%>    
+            <% if app.STAdmitted == nil and @term = current_term(exact: false)%>    
 
               <%= link_to("ST Admission Decision", edit_adm_st_path(app.AltID), :class => "action details btn btn-info action-small issues")%>
 
