half done with index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <li class="active"><%= link_to("Praxis Registration", new_praxis_result_path) %></li>
       <li class="active"><%= link_to("Admission to TEP", adm_tep_index_path) %></li>
       <li class="active"><%= link_to("Admission to Student Teaching", adm_st_index_path) %></li>
+      <li class="active"><%= link_to("Program Exits", prog_exits_path) %></li>
       <li class="dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
         <ul class="dropdown-menu">
