--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -438,6 +438,9 @@ table > tr > td.issue_discrip {height: 100px;}
 /*.good_text {background-color: green; font-weight: bold;}
 .bad_text {background-color: red; font-weight: bold;}*/
 
+/*popup window*/
+
+
 
 .good_text {
   color: green;
