added to prog_exits

--- a/app/views/application/_details_popover.html.erb
+++ b/app/views/application/_details_popover.html.erb
@@ -1,3 +1,12 @@
+  <!-- Partial for a popover.
+
+    arguments:
+        record_id: an id for the record the popover will represent. Must be unique to the page
+        popover_title: the title of the popover.
+        content: the main content to be dispalyed
+         -->
+
+
   <!-- Button trigger modal -->
   <button class="btn btn-info" data-toggle="modal" data-target="#exit-<%= record_id %>-details">
     <%= popover_title  %>
